[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatTea"
dynamic = ["version"]
description = "ChatTea: ChatArch Python package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.4.2,<9.0", "chatstyle>=0.1.0,<0.2.0", "chatenv>=0.2.2,<0.3.0"]
authors = [{name = "ChatArch", email = "1073853456@qq.com"}]
keywords = ["chattea", "chatarch", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChatArch/ChatTea"
Repository = "https://github.com/ChatArch/ChatTea"
Documentation = "https://arch.gh.wzhecnu.cn/ChatTea/"

[project.scripts]
chattea = "chattea.cli:main"

[project.entry-points."chatenv.configs"]
chattea = "chattea.config"

[project.optional-dependencies]
dev = ["build", "pytest", "twine", "tomli>=2.4.1,<3.0; python_version<'3.11'"]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=9.0.0", "mkdocs-static-i18n>=1.2.0", "mike>=2.0.0"]

[tool.setuptools.dynamic]
version = {attr = "chattea.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
